--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nyse-holidays",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Get all NYSE markets observe U.S. holidays",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "repository": "https://github.com/tsekityam/nyse-holidays.git",
   "author": "Tse Kit Yam <tsekityam@users.noreply.github.com>",
   "license": "MIT",
@@ -27,6 +27,9 @@
     "build": "tsc",
     "lint": "eslint --ignore-path '.gitignore' '**/*.ts'",
     "format": "prettier --ignore-unknown --ignore-path '.gitignore' --write '**/*'",
-    "test": "tap --node-arg=--require=ts-node/register 'index.test.ts'"
-  }
+    "test": "tap --node-arg=--require=ts-node/register './src/index.test.ts'"
+  },
+  "keywords": [
+    "holidays, nyse"
+  ]
 }
