--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,10 @@
     "target": "es5",
     "module": "commonjs",
     "declaration": true,
-    "outDir": "./build",
+    "outDir": "./lib",
     "removeComments": true,
     "strict": true,
     "esModuleInterop": true
   },
-  "exclude": ["**/*.test.ts", "build"]
+  "exclude": ["**/*.test.ts", "lib"]
 }
