--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/tap": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
+    "codecov": "^3.8.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
@@ -27,7 +28,8 @@
     "build": "tsc",
     "lint": "eslint --ignore-path '.gitignore' '**/*.ts'",
     "format": "prettier --ignore-unknown --ignore-path '.gitignore' --write '**/*'",
-    "test": "tap --node-arg=--require=ts-node/register './src/index.test.ts'"
+    "test": "tap --node-arg=--require=ts-node/register './src/index.test.ts'",
+    "posttest": "tap --coverage-report=text-lcov | codecov"
   },
   "keywords": [
     "holidays",
