--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "eslint --ignore-path '.gitignore' '**/*.ts'",
     "format": "prettier --ignore-unknown --ignore-path '.gitignore' --write '**/*'",
     "test": "tap --node-arg=--require=ts-node/register './src/index.test.ts'",
-    "posttest": "tap --coverage-report=text-lcov | codecov"
+    "posttest": "tap --coverage-report=text-lcov | codecov --pipe"
   },
   "keywords": [
     "holidays",
