--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build": "tsc",
     "lint": "eslint --ignore-path '.gitignore' '**/*.ts'",
     "format": "prettier --ignore-unknown --ignore-path '.gitignore' --write '**/*'",
-    "test": "tap --node-arg=--require=ts-node/register './src/index.test.ts'",
+    "test": "tap --node-arg=--require=ts-node/register",
     "posttest": "tap --coverage-report=text-lcov | codecov --pipe"
   },
   "keywords": [
