--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,6 +12,7 @@ jobs:
         with:
           node-version: 14.x
           registry-url: https://registry.npmjs.org/
+          cache: yarn
       - run: yarn
       - run: yarn lint
       - run: yarn test
@@ -32,6 +33,7 @@ jobs:
         with:
           node-version: 14.x
           registry-url: https://npm.pkg.github.com/
+          cache: yarn
       - run: yarn
       - run: yarn lint
       - run: yarn test
