--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     "dayjs": "^1.10.6"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
     "@types/node": "^16.4.10",
-    "@types/tap": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "codecov": "^3.8.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "mocha": "^9.0.3",
+    "nyc": "^15.1.0",
     "prettier": "^2.3.2",
-    "tap": "^15.0.9",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
@@ -28,8 +29,8 @@
     "build": "tsc",
     "lint": "eslint --ignore-path '.gitignore' '**/*.ts'",
     "format": "prettier --ignore-unknown --ignore-path '.gitignore' --write '**/*'",
-    "test": "tap --node-arg=--require=ts-node/register",
-    "posttest": "tap --coverage-report=text-lcov | codecov --pipe"
+    "test": "nyc mocha --require ts-node/register test/test.ts",
+    "posttest": "nyc report --reporter=text-lcov | codecov --pipe"
   },
   "keywords": [
     "holidays",
