--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "declaration": true,
     "outDir": "./lib",
     "removeComments": true,
+    "sourceMap": true,
     "strict": true,
     "esModuleInterop": true
   },
