--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,9 @@ name: Node.js Package
 on:
   release:
     types: [created]
+
+  workflow_dispatch:
+
 jobs:
   publish-npm:
     runs-on: ubuntu-latest
