Reduce package size

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,10 @@
     "target": "es5",
     "module": "commonjs",
     "declaration": true,
-    "outDir": "./lib",
+    "outDir": "dist",
     "removeComments": true,
-    "sourceMap": true,
     "strict": true,
     "esModuleInterop": true
   },
-  "exclude": ["**/test.ts", "lib"]
+  "exclude": ["**/test.ts", "dist"]
 }
