--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "nyse-holidays",
   "version": "1.1.1",
   "description": "Get all NYSE markets observe U.S. holidays",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/tsekityam/nyse-holidays.git",
   "author": "Tse Kit Yam <tsekityam@users.noreply.github.com>",
   "license": "MIT",
@@ -34,6 +34,9 @@
     "test": "nyc mocha",
     "posttest": "nyc report --reporter=text-lcov | codecov --pipe"
   },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "holidays",
     "nyse"
