--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "build": "tsc",
+    "prepack": "tsc",
     "lint": "eslint --ignore-path '.gitignore' '**/*.ts'",
     "format": "prettier --ignore-unknown --ignore-path '.gitignore' --write '**/*'",
     "test": "nyc mocha",
