--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,5 @@
 {
   "require": ["ts-node/register", "source-map-support/register"],
   "recursive": true,
-  "spec": "test/test.ts"
+  "spec": "src/**/*.spec.ts"
 }
