--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "strict": true,
     "esModuleInterop": true
   },
-  "exclude": ["**/test.ts", "dist"]
+  "exclude": ["src/**/*.spec.ts", "dist"]
 }
