--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,9 @@
 {
+  "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
     "declaration": true,
     "outDir": "dist",
-    "removeComments": true,
-    "strict": true,
-    "esModuleInterop": true
+    "removeComments": true
   },
   "exclude": ["src/**/*.spec.ts", "dist"]
 }
