Revert "added src files to npm install from github"
This reverts commit cdfebf37ccf662eb30274b7b135e047844b4e856.

--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "posttest": "nyc report --reporter=text-lcov | codecov --pipe"
   },
   "files": [
-    "dist",
-    "src",
-    "tsconfig.json"
+    "dist"
   ],
   "keywords": [
     "holidays",
